# django-todo-app

./: .gitignore  pyproject.toml
api/: serializers.py  urls.py  views.py
base/: models.py
base/migrations/: 0001_initial.py  0002_car.py  0003_item_priority.py
todo/: settings.py  urls.py
todoreact/: package-lock.json
todoreact/src/: App.js
