[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-todo-app"
description = 'a django playground'
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "Waylon S. Walker", email = "waylon@waylonwalker.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ['django', 'djangorestframework']
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/unknown/django-todo-app#readme"
Issues = "https://github.com/unknown/django-todo-app/issues"
Source = "https://github.com/unknown/django-todo-app"

[tool.hatch.version]
path = "django_todo_app/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
]
[tool.hatch.envs.default.scripts]
serve = 'python manage.py runserver'
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=django_todo_app --cov=tests"
no-cov = "cov --no-cov"

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "django_todo_app/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
